--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.14.1",
+    "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
-    "lucide-react": "^0.344.0",
-    "uuid": "^10.0.0",
-    "firebase": "^10.8.0"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
